# seahorse

./: .gitignore  404.html  LICENSE  README.md  board_tictac.py  dev_requirements.txt  game_state_tictac.py  gen_ref_pages.py  index.html  main_tictac.py  master_tictac.py  mkdocs.yml  objects.inv  player_tictac.py  pyproject.toml  random_player_tictac.py  requirements.txt
.github/workflows/: publish-docs.yml  python-linting.yml  python-package.yml  python-release.yml  python-testing.yml
GUI/: main.js
assets/: logo_coliseum.xcf  logo_headless.xcf  logo_seahorse.xcf  seahorse.ai
docs/: coliseum.html  index.html  index.md  search.js
docs/coliseum/: __about__.html  examples.html  execution.html  game.html  player.html
docs/coliseum/examples/: tictactoe.html
docs/coliseum/execution/: lan.html  local.html  server.html
docs/coliseum/game/: action.html  game_layout.html  game_state.html  master.html  representation.html  time_manager.html
docs/coliseum/player/: player.html
docs/overview/: networking.md  objects.md
docs/stylesheets/: extra.css
docs/tutorials/: 1-getting_started.md  2-Building_Tic_Tac_Toe.md  3-playing_across_the_internet.md  4-Recording_games.md  5-Parallelization.md  6-Using the Challonge API.md
examples/: main.py  requirements.txt
examples/abalone/: abalone.py  alpha_player_abalone.py  board_abalone.py  challonge_abalone.py  game_state_abalone.py  master_abalone.py  player_abalone.py  random_player_abalone.py  standalone_abalone.py
examples/abalone/challonge/: challonge_abalone.py  test_challonge_abalone.py
examples/avalam/: alpha_player_avalam.py  avalam.py  board_avalam.py  challonge_avalam.py  game_state_avalam.py  master_avalam.py  random_player_avalam.py  standalone_avalam.py  test_challonge_avalam.py
examples/avalam/GUI/: index.html  main.js
examples/mancala/: board_mancala.py  game_state_mancala.py  mancala.py  master_mancala.py  random_player_mancala.py
examples/tictactoe/: alpha_player_tictac.py  challonge_tictac.py  exec_multi_tictac.py  game_state_tictac.py  log.txt  main_tictac.py  master_tictac.py  players_tictac.csv  random_player_tictac.py  standalone_tictac.py  test.py  tictactoe.py
overview/networking/: index.html
overview/objects/: index.html
search/: search_index.json
src/: abalone.py  avalam.py  avalam_test.py  challonge_3.py  challonge_abalone.py  challonge_avalam.py  challonge_tictac.py  interactive.py  main.py  mancala.py  players.csv  players_abalone.csv  players_avalam.csv  standalone.py  standalone_abalone.py  standalone_tictac.py  test_avalam.py  test_challonge.py  test_challonge_3.py  test_challonge_abalone.py  test_challonge_tictac.py  test_exec_multi_tictac.py  test_human_player.py  tictactoe.py
src/docs/: index.html  seahorse.html  search.js
src/seahorse/: __about__.py  __init__.py
stylesheets/: extra.css
tests/: test_base.py
tests/examples/: test_tictactoe.py
tests/game/: test_master.py  test_timer.py
tests/utils/: test_timer.py
tictactoe/: board_tictac.py  game_state_tictac.py
tictactoe/GUI/: main.js
tutorials/1-getting_started/: index.html
tutorials/2-Building_Tic_Tac_Toe/: index.html
tutorials/3-playing_across_the_internet/: index.html
tutorials/4-Recording_games/: index.html
tutorials/5-Parallelization/: index.html
tutorials/6-Using the Challonge API/: index.html
(+184 files in other folders)
